# fake-schema-generator

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
example/: example_classes.py  example_types.py  run.py
fake_schema_generator/: __init__.py
fake_schema_generator/fake_types/: FakeSchemaGenerator.py  FakeType.py  SchemaCondition.py  ValueOf.py  __init__.py
fake_schema_generator/functions/: __init__.py  dataclass_to_interface.py  extract_annotations.py  resolve_annotated_type.py
fake_schema_generator/operators/: __init__.py  noop_operator.py  product_operator.py  sum_operator.py
fake_schema_generator/providers/: CalculateProvider.py  ProductNameProvider.py  ReferenceProvider.py  SchemaReferenceBaseProvider.py  SequentialNumberProvider.py  __init__.py
tests/: FakeSchemaGenerator_test.py  SequentialNumberProvider_test.py  product_operator_test.py  sum_operator_test.py
