[tool.black]
line-length = 120

[tool.isort]
force_single_line = "true"
multi_line_output = 3
include_trailing_comma = "true"
force_grid_wrap = 0
use_parentheses = "true"
line_length = 120
profile = "black"

[tool.poetry]
name = "fake-schema-generator"
version = "0.1.0"
description = ""
authors = ["Me <someone@somewhe.re>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^25.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
